--- a/src/contents/members/mehak-sachdeva/biography.mdx
+++ b/src/contents/members/mehak-sachdeva/biography.mdx
@@ -1,5 +1,3 @@
-Mehak Sachdeva earned her doctorate in Geographic Information Science from Arizona State University in 2022. Prior to joining FSU, Mehak was an Urban Science Faculty Fellow at the Center for Urban Science + Progress at NYU and previously held a postdoctoral research position at the Spatial Analysis Research Center at ASU.
-
-Her research develops spatially explicit methods and models to analyze how spatial context and social interactions affect human behavior, choices, and decision-making, especially pertaining to understanding social phenomena such as election outcomes, disease spread, resilience to natural hazard vulnerability, and social dynamics leading to residential choices. Relatedly, her research also delves into the measurement of the spatial extent/scale across which such place-based contextual effects might vary and how such spatial variances could help inform tangible, place-based social policy interventions. Her research hence lies at the intersection of spatial statistics, computational social science, and urban planning and social policy.
+Mehak Sachdeva is an assistant professor in computational urban science at the Department of Urban and Regional Planning at Florida State University. Prior to joining FSU, she was an urban science faculty fellow at the Center for Urban Science + Progress at the Tandon School of Engineering at NYU. Mehak also has previous experience as a postdoctoral researcher at the spatial analysis research center at Arizona State University from where she also graduated with a Ph.D. in Geographic Information Science in 2022. Her research develops spatially explicit methods and models to analyze how spatial context and social interactions affect human behavior, choices, and decision-making, especially pertaining to understanding social phenomena such as election outcomes, disease spread, resilience to natural hazard vulnerability, and social dynamics leading to residential choices. Relatedly, her research also delves into the measurement of the spatial extent/scale across which such place-based contextual effects might vary and how such spatial variances could help inform tangible, place-based social policy interventions. Her research hence lies at the intersection of spatial statistics, computational social science, and urban planning and social policy.
 
 Prior to pursuing academia, she had experience working at Carto, a web-mapping software company, and key government organizations such as the New York City Economic Development Cooperation and the New York City Planning Department at Staten Island.
