--- a/src/contents/members/ziqi-li/biography.mdx
+++ b/src/contents/members/ziqi-li/biography.mdx
@@ -1,3 +1,1 @@
-Ziqi Li, Ph.D., earned his doctorate in Geography from Arizona State University in 2020.
-
-I am a spatial data scientist interested in advancing statistical and machine learning models to explore and understand human behavior across different spatial contexts. I am one of the primary developers of Multi-scale Geographically Weighted Regression (MGWR) and a core developer of the Python Spatial Analysis Library (PySAL). My current work centers on developing spatially explicit machine learning models and improving their interpretability and explainability.
+I am a spatial data scientist interested in advancing statistical and machine learning models to understand human behavior across different spatial contexts. I am the developer of GeoShapley, one of the primary developers of Multi-scale Geographically Weighted Regression (MGWR) and a core developer of Python Spatial Analysis Library (PySAL). My current work centers on developing spatially explicit machine learning models and improving their interpretability and explainability.
