--- a/src/contents/announcements/now-hiring-tenure-track-faculty.mdx
+++ b/src/contents/announcements/now-hiring-tenure-track-faculty.mdx
@@ -2,18 +2,12 @@
 title: 'Now Hiring: Two Tenure-Track Faculty Positions'
 date: '2025-10-16'
 author: 'Stewart Fotheringham'
-description: 'The Spatial Data Science Center invites visionary scholars to join our tenure-track faculty and expand the boundaries of GIScience.'
+description: 'The Spatial Data Science Center is hiring TWO tenture track assistant professors in Spatial Data Science'
 thumbnail: '/img/news-demo/default-news-thumbnail.jpg'
 ---
 
-We are launching a global search for two tenure-track faculty members to help lead the Spatial Data Science Center into its next phase of growth. Successful candidates will join a collaborative team that blends rigorous spatial analytics with immersive design and open-source innovation.
+The Spatial Data Science Center (SDSC) at Florida State University is hiring two tenure-track assistant professors in any area of spatial data science (e.g., GeoAI, spatial statistics, health, transportation, urban, crime, voting, environment, etc.). The candidate will have an academic home in one of the departments (Geography, Urban and Regional Planning, Economics, Political Science, Public Administration, Sociology) of the College of Social Sciences & Public Policy at FSU.
 
-**What we are looking for**
+Application review begins **December 1, 2025**. 
 
-- Scholars with expertise in GIScience, spatial statistics, geospatial AI, or related fields who are ready to push disciplinary frontiers.
-- Leaders who thrive in cross-campus and community partnerships, delivering high-impact research that drives policy and practice.
-- Mentors committed to cultivating the next generation of spatial data scientists through inclusive teaching and hands-on project guidance.
-
-These appointments offer robust lab support, access to state-of-the-art spatial computing resources, and opportunities to help shape new academic and public initiatives. Review of applications will begin immediately and continue until both positions are filled.
-
-Interested candidates should share their CV and a short statement of interest with the SDSC leadership team at [sdsc@fsu.edu](mailto:sdsc@fsu.edu). Let’s chart the next frontier of spatial understanding together.
+See more details here: [https://jobs.aag.org/job/assistant-professor-in-spatial-data-science/80710961/](https://jobs.aag.org/job/assistant-professor-in-spatial-data-science/80710961/)
